--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "startech_front": "file:"
   },
   "devDependencies": {
